# demo-CI-CD

./: .dockerignore  dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
