[project]
name = "fastapi-cicd-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "jeevanvb24",email = "jeevan.cb@suketa.in"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
httpx = "^0.28.1"

